[package]
name = "rust-kvac"
version = "0.1.0"
edition = "2021"

[dependencies]
unknown_order = { version = "0.9", default-features = false, features = [
    "openssl",
] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmark_insert"
harness = false

[[bench]]
name = "benchmark_keygen"
harness = false

[[bench]]
name = "benchmark_proof_update"
harness = false

[[bench]]
name = "benchmark_verify"
harness = false
