[package]
name = "rust-kvac"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.8"
sha256 = "1.5.0"
unknown_order = { version = "0.9", default-features = false, features = [
    "openssl",
] }
rayon = "1.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench_main"
harness = false
path = "benchmarks/bench_main.rs"
