[package]
name = "rust-kvac"
version = "0.1.0"
authors = ["Jean Gal <jg7613@nyu.edu>"]
edition = "2021"
description = "A Rust implementation of Key-Value Commitments (KVaC)"
license = "MIT"
repository = "https://github.com/jjeangal/rust-kvac"
documentation = "https://github.com/jjeangal/rust-kvac/README.md"
readme = "README.md"
keywords = ["cryptography", "commitment", "kvac", "blockchain", "stateless"]
categories = ["cryptography"]

[dependencies]
once_cell = "1.8"
sha256 = "1.5.0"
unknown_order = { version = "0.9", default-features = false, features = [
    "openssl",
] }
rayon = "1.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench_main"
harness = false
path = "benchmarks/bench_main.rs"
